--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Htet Myat Lwin | Home Page</title>
+        <link rel="icon" type="image/gif" href="images/favicon.gif">
+    </head>
+    <body>
+        <div>
+        <h1 style="text-align: center; font-size: 80px; margin: 8px;">Chess & Stuff</h1>
+        <h2 style="text-align: center; font-size: 30px; margin: 8px;">Welcome to the website</h2>
+        </div>
+        <h2 style="position: absolute; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h3>
+        <div style="position: absolute; top: 10%; left: 1%;">
+            <h2 style="margin: 5%;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" target="_blank" title="Developer's contact">Facebook</a></h2>
+            <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
+        </div>
+        <hr style="margin: 0px;">
+        <h1 style="text-align: center; font-size: 40px;">Categories</h1>
+        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
+            <h2>Openings</h2>
+            <h2>Middlegame</h2>
+            <h2>Endgame</h2>
+        </div>
+    </body>
+</html>
