--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
         <hr style="margin: 0px;">
-        <h1 style="text-align: center; font-size: 40px;">Categories</h1>
-        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
-            <h2>Openings</h2>
-            <h2>Middlegame</h2>
-            <h2>Endgame</h2>
+        <h1 style="text-align: center; font-size: 60px;">Categories</h1>
+        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 40px;">
+            <p>Openings</p>
+            <p>Middlegame</p>
+            <p>Endgame</p>
         </div>
     </body>
 </html>
