--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link rel="icon" type="image/gif" href="images/favicon.gif">
     </head>
     <body>
+        <h2 style="position: relative; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h2>
         <div>
         <h1 style="text-align: center; font-size: 80px; margin: 8px;">Chess & Stuff</h1>
         <h2 style="text-align: center; font-size: 30px; margin: 8px;">Welcome to the website</h2>
         </div>
-        <h2 style="position: absolute; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h3>
-        <div style="position: absolute; top: 10%; left: 1%;">
+        <div style="position: relative; top: 10%; left: 1%;">
             <h2 style="margin: 5%;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" target="_blank" title="Developer's contact">Facebook</a></h2>
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
@@ -22,4 +22,5 @@
             <p>Endgame</p>
         </div>
     </body>
+
 </html>
