--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 style="text-align: center; font-size: 80px; margin: 8px;">Chess & Stuff</h1>
         <h2 style="text-align: center; font-size: 30px; margin: 8px;">Welcome to the website</h2>
         </div>
-        <div style="position: relative; top: 10%; left: 1%;">
+        <div style="position: absolute; top: 10%; left: 1%;">
             <h2 style="margin: 5%;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" target="_blank" title="Developer's contact">Facebook</a></h2>
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
@@ -24,3 +24,4 @@
     </body>
 
 </html>
+
