--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <body>
         <h2 style="position: relative; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h2>
         <div>
-        <h1 style="text-align: center; font-size: 80px; margin: 8px;">Chess & Stuff</h1>
-        <h2 style="text-align: center; font-size: 30px; margin: 8px;">Welcome to the website</h2>
+        <h1 style="text-align: center; font-size: 6vw; margin: 8px;">Chess & Stuff</h1>
+        <h2 style="text-align: center; font-size: 2.5vw; margin: 8px;">Welcome to the website</h2>
         </div>
         <div style="position: absolute; top: 10%; left: 1%;">
             <h2 style="margin: 5%;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" target="_blank" title="Developer's contact">Facebook</a></h2>
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
         <hr style="margin: 0px;">
-        <h1 style="text-align: center; font-size: 60px;">Categories</h1>
-        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 40px;">
+        <h1 style="text-align: center; font-size: 4.5vw;">Categories</h1>
+        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
             <p>Openings</p>
             <p>Middlegame</p>
             <p>Endgame</p>
@@ -24,4 +24,3 @@
     </body>
 
 </html>
-
