--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
         <hr style="margin: 0px;">
-        <h1 style="text-align: center; font-size: 4.5vw;">Categories</h1>
+        <h1 style="text-align: center; font-size: 4.5vw; margin: 0%">Categories</h1>
         <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
             <p>Openings</p>
             <p>Middlegame</p>
@@ -24,3 +24,4 @@
     </body>
 
 </html>
+
