--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Htet Myat Lwin | Home Page</title>
         <link rel="icon" type="image/gif" href="images/favicon.gif">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h2 style="position: relative; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h2>
@@ -15,13 +16,11 @@
             <h2 style="margin: 5%;"><a href="https://t.me/Vforvector" target="_blank" title="Developer's contact">Telegram</a></h2>
         </div>
         <hr style="margin: 0px;">
-        <h1 style="text-align: center; font-size: 4.5vw; margin: 0%">Categories</h1>
+        <h1 style="text-align: center; font-size: 4.5vw; margin: 0%;">Categories</h1>
         <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
             <p>Openings</p>
             <p>Middlegame</p>
             <p>Endgame</p>
         </div>
     </body>
-
 </html>
-
