--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
         <title>Htet Myat Lwin | Home Page</title>
         <link rel="icon" type="image/gif" href="images/favicon.gif">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            button {
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 6px;
+                border-color: black;
+                height: 3vw;
+                width: 10vw;
+            }
+        </style>
     </head>
     <body>
-        <h2 style="position: relative; top: 0%; left: 1%;"><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="Go to the page" target="_blank">Read more about the website</a></h2>
+        <h2 style="position: relative; top: 0%; left: 1%;"><a href="aboutwebsite.html" title="Go to the page" target="_blank">Read more about the website</a></h2>
         <div>
         <h1 style="text-align: center; font-size: 6vw; margin: 8px;">Chess & Stuff</h1>
         <h2 style="text-align: center; font-size: 2.5vw; margin: 8px;">Welcome to the website</h2>
@@ -18,9 +28,16 @@
         <hr style="margin: 0px;">
         <h1 style="text-align: center; font-size: 4.5vw; margin: 0%;">Categories</h1>
         <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
-            <p>Openings</p>
-            <p>Middlegame</p>
-            <p>Endgame</p>
+            <button onclick="">Openings</button>
+            <br>
+            <button onclick="">Middlegame</button>
+            <br>
+            <button onclick="">Endgame</button>
+            <br>
+            <button onclick="">Tactics</button>
+            <br>
+            <button onclick="">Game collections</button>
         </div>
     </body>
 </html>
+
