--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <hr style="margin: 0px;">
         <h1 style="text-align: center; font-size: 4.5vw; margin: 0%;">Categories</h1>
         <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
-            <button onclick="">Openings</button>
+            <button onclick="" style="font-size: 2vw;">Openings</button>
             <br>
-            <button onclick="">Middlegame</button>
+            <button onclick="" style="font-size: 2vw;">Middlegame</button>
             <br>
-            <button onclick="">Endgame</button>
+            <button onclick="" style="font-size: 2vw;">Endgame</button>
             <br>
-            <button onclick="">Tactics</button>
+            <button onclick="" style="font-size: 2vw;">Tactics</button>
             <br>
-            <button onclick="">Game collections</button>
+            <button onclick="" style="font-size: 2vw;">Game collections</button>
         </div>
     </body>
 </html>
