--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 color: rgb(0, 0, 0);
                 border-radius: 6px;
                 border-color: black;
-                height: 3vw;
-                width: 10vw;
+                height: 5vw;
+                width: 12vw;
             }
         </style>
     </head>
@@ -27,17 +27,13 @@
         </div>
         <hr style="margin: 0px;">
         <h1 style="text-align: center; font-size: 4.5vw; margin: 0%;">Categories</h1>
-        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 3vw;">
-            <button onclick="" style="font-size: 2vw;">Openings</button>
-            <br>
-            <button onclick="" style="font-size: 2vw;">Middlegame</button>
-            <br>
-            <button onclick="" style="font-size: 2vw;">Endgame</button>
-            <br>
-            <button onclick="" style="font-size: 2vw;">Tactics</button>
-            <br>
-            <button onclick="" style="font-size: 2vw;">Game collections</button>
+        <div style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 5vw;">
+            <p>Openings</p>
+            <p>Middlegame</p>
+            <p>Endgame</p>
+            <p>Game Collections</p>
         </div>
     </body>
 </html>
+
 
