--- a/index.html
+++ b/index.html
@@ -4,22 +4,12 @@
         <title>Htet Myat Lwin | Home Page</title>
         <link rel="icon" type="image/gif" href="images/favicon.gif">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            button {
-                background-color: rgb(255, 255, 255);
-                color: rgb(0, 0, 0);
-                border-radius: 6px;
-                border-color: black;
-                height: 5vw;
-                width: 12vw;
-            }
-        </style>
     </head>
     <body>
         <h2 style="position: relative; top: 0%; left: 1%;"><a href="aboutwebsite.html" title="Go to the page" target="_blank">Read more about the website</a></h2>
         <div>
-        <h1 style="text-align: center; font-size: 6vw; margin: 8px;">Chess & Stuff</h1>
-        <h2 style="text-align: center; font-size: 2.5vw; margin: 8px;">Welcome to the website</h2>
+        <h1 style="text-align: center; font-size: clamp(20px, 5vw, 50px); margin: 8px;">Chess & Stuff</h1>
+        <h2 style="text-align: center; font-size: clamp(20px, 5vw, 50px); margin: 8px;">Welcome to the website</h2>
         </div>
         <div style="position: absolute; top: 10%; left: 1%;">
             <h2 style="margin: 5%;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" target="_blank" title="Developer's contact">Facebook</a></h2>
