--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Chess & Stuff | Home Page</title>
+        <link rel="icon" type="type" href="images/favicon.gif">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <div style="font-size: 20px;">
+            <p>Read more about the website</p>
+            <p>Facebook</p>
+            <p>Telegram</p>
+        </div>
+
+    </body>
+</html>
 
