--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div style="font-size: 20px;">
+        <div style="font-size: 20px; position: fixed; top: 5px; left: 5px">
             <p>Read more about the website</p>
             <p>Facebook</p>
             <p>Telegram</p>
         </div>
-
+        <h1 style="font-size: 80px; text-align: center;">Chess & Stuff</h1>
+        <h2 style="font-size: 30px; text-align: center;">Welcome to the website</h2>
     </body>
 </html>
-
