--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div style="font-size: 20px; position: fixed; top: 5px; left: 5px">
+        <div style="font-size: clamp(20px, 2vw, 60px); position: fixed; top: 5px; left: 5px">
             <p>Read more about the website</p>
             <p>Facebook</p>
             <p>Telegram</p>
