--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div style="font-size: clamp(20px, 1vw, 60px); position: fixed; top: 5px; left: 5px;">
+        <div style="font-size: clamp(20px, 2vw, 60px); position: fixed; top: 5px; left: 5px;">
             <p style="margin: 0;">Read more about the website</p>
             <p style="margin: 0;">Facebook</p>
             <p style="margin: 0;">Telegram</p>
         </div>
-        <h1 style="font-size: clamp(20px, 5vw, 60px); text-align: center;">Chess & Stuff</h1>
-        <h2 style="font-size: clamp(20px, 3vw, 60px); text-align: center;">Welcome to the website</h2>
+        <h1 style="font-size: clamp(20px, 5vw, 60px); text-align: center; margin: 0;">Chess & Stuff</h1>
+        <h2 style="font-size: clamp(10px, 2.5vw, 30px); text-align: center; margin: 0;">Welcome to the website</h2>
     </body>
 </html>
