--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <p style="margin: 0;">Telegram</p>
         </div>
         <br>
-        <h1 style="font-size: clamp(20px, 6vw, 80px); text-align: center; margin: 0;">Chess & Stuff</h1>
-        <h2 style="font-size: clamp(10px, 2.5vw, 30px); text-align: center; margin: 0;">Welcome to the website</h2>
+        <h1 style="text-align: center; font-size: clamp(20px, 5vw, 80px);">Chess & Stuff</h1>
     </body>
 </html>
