--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div style="font-size: clamp(20px, 2vw, 60px); position: fixed; top: 5px; left: 5px;">
+        <div style="font-size: clamp(20px, 2vw, 60px); position: relative; top: 5px; left: 5px;">
             <p style="margin: 0;">Read more about the website</p>
             <p style="margin: 0;">Facebook</p>
             <p style="margin: 0;">Telegram</p>
         </div>
-        <br>
-        <br>
         <br>
         <hr>
         <h1 style="text-align: center; font-size: clamp(20px, 12vw, 80px); margin: 0">Chess & Stuff</h1>
         <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
     </body>
 </html>
-
-
