--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     </head>
     <body>
         <div style="font-size: clamp(20px, 2vw, 60px); position: relative; top: 5px; left: 5px;">
-            <p style="margin: 0;">Read more about the website</p>
-            <p style="margin: 0;">Facebook</p>
-            <p style="margin: 0;">Telegram</p>
+            <p style="margin: 0;"><a href="aboutwebsite.html" title="Go to another page" target="_blank">Read more about the website</a></p>
+            <p style="margin: 0;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" title="Go to Facebook" target="_blank">Facebook</a></p>
+            <p style="margin: 0;"><a href="https://t.me/Vforvector" title="Go to Telegram" target="_blank">Telegram</a></p>
         </div>
-        <br>
         <hr>
         <h1 style="text-align: center; font-size: clamp(20px, 12vw, 80px); margin: 0">Chess & Stuff</h1>
         <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
