--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <hr>
         <h1 style="text-align: center; font-size: clamp(20px, 12vw, 80px); margin: 0">Chess & Stuff</h1>
         <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
+        <dl>
+            <dt style="font-size: clamp(20px, 3vw, 60px);">Openings</dt>
+            <dd style="font-size: clamp(20px, 2vw, 60px);">Queen's Gambit</dd>
+        </dl>
     </body>
 </html>
