--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
         <hr>
         <h1 style="text-align: center; font-size: clamp(20px, 12vw, 80px); margin: 0">Chess & Stuff</h1>
         <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
-        <button style="
-            font-size: clamp(14px, 4vw, 18px);
-            background-color: rgb(16, 100, 173);
-            color: white;
-            border-radius: 8px;
-            border: 1px solid rgb(40, 40, 40);
-            width: clamp(140px, 60%, 220px);
-            padding: 10px;
-            ">
-      Openings
-        </button>
+        <br>
+        <div style="text-align: center;">
+            <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Openings
+            </button>
+
+        </div>
     </body>
 </html>
-
-
