--- a/index.html
+++ b/index.html
@@ -26,7 +26,57 @@
                 padding: 10px;
                 ">Openings
             </button>
-
+                        <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Middlegame
+            </button>
+                        <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Endgame
+            </button>
+                        <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Tactics
+            </button>
+                        <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Positional
+            </button>
+                        </button>
+                        <button style="
+                font-size: clamp(14px, 4vw, 18px);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
+                border-radius: 8px;
+                border: 3px solid rgb(40, 40, 40);
+                width: clamp(140px, 60%, 220px);
+                padding: 10px;
+                ">Game Collections
+            </button>
         </div>
     </body>
 </html>
