--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Openings
             </button>
             <br>
@@ -35,6 +36,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Middlegame
             </button>
             <br>
@@ -46,6 +48,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Endgame
             </button>
             <br>
@@ -57,6 +60,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Tactics
             </button>
             <br>
@@ -68,6 +72,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Positional
             </button>
             <br>
@@ -79,6 +84,7 @@
                 border: 3px solid rgb(40, 40, 40);
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
+                margin: 10px 0;
                 ">Game Collections
             </button>
         </div>
