--- a/aboutwebsite.html
+++ b/aboutwebsite.html
@@ -11,7 +11,8 @@
             <li>Encourage self-learning and personal growth</li>
             <li>Offer a user-friendly and organized interface for convenience</li>
         </ul>
-        <h1>Donations are appreciated and will be added to the name list: Phone number: </h1>
+        <h1>Donations are appreciated and will be added to the name list. Phone number: </h1>
         <h2>You can send the screenshots of payment to my <a href="https://t.me/Vforvector">Telegram</a></h2>
     </body>
 </html>
+
