--- a/aboutwebsite.html
+++ b/aboutwebsite.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>More about the website</title>
+        <link rel="icon" type="type" href="images/favicon.gif">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <ul style="font-size: clamp(20px, 2vw, 60px); position: relative; top: 5px; left: 5px;">This website is developed by Htet Myat Lwin to serve multiple purposes:
@@ -15,4 +17,3 @@
         <h2>You can send the screenshots of payment to my <a href="https://t.me/Vforvector">Telegram</a></h2>
     </body>
 </html>
-
