--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div style="font-size: clamp(20px, 2vw, 60px); position: relative; top: 5px; left: 5px;">
-            <p style="margin: 0;"><a href="aboutwebsite.html" title="Go to another page" target="_blank">Read more about the website</a></p>
+            <p style="margin: 0;"><a href="aboutwebsite.html" title="Go to another page">Read more about the website</a></p>
             <p style="margin: 0;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" title="Go to Facebook" target="_blank">Facebook</a></p>
             <p style="margin: 0;"><a href="https://t.me/Vforvector" title="Go to Telegram" target="_blank">Telegram</a></p>
         </div>
@@ -16,6 +16,7 @@
         <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
         <br>
         <div style="text-align: center;">
+            <a href="openings.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -25,8 +26,10 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Openings
             </button>
+            </a>
             <br>
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
@@ -37,6 +40,7 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Middlegame
             </button>
             <br>
@@ -49,6 +53,7 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Endgame
             </button>
             <br>
@@ -61,6 +66,7 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Tactics
             </button>
             <br>
@@ -73,6 +79,7 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Positional
             </button>
             <br>
@@ -85,8 +92,10 @@
                 width: clamp(140px, 60%, 220px);
                 padding: 10px;
                 margin: 10px 0;
+                cursor: pointer;
                 ">Game Collections
             </button>
         </div>
     </body>
 </html>
+
