--- a/aboutwebsite.html
+++ b/aboutwebsite.html
@@ -14,6 +14,7 @@
             <li>Offer a user-friendly and organized interface for convenience</li>
         </ul>
         <h1>Donations are appreciated and will be added to the name list. Phone number: </h1>
-        <h2>You can send the screenshots of payment to my <a href="https://t.me/Vforvector">Telegram</a></h2>
+        <h2>You can send the screenshots of payment to my <a href="https://t.me/Vforvector" title="Go to Telegram" target="_blank">Telegram</a></h2>
+        <h2><a href="index.html" title="GO back">Go back</a></h2>
     </body>
 </html>
