--- a/openings.html
+++ b/openings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>More about the website</title>
+        <title>More about Chess & Stuff</title>
         <link rel="icon" type="type" href="images/favicon.gif">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
