--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                 ">Game Collections
             </button>
         </div>
+        <p style="position: relative; bottom: 0%; text-align: center;">“All external links are provided for educational purposes. Chess & Stuff does not host or claim ownership of any third-party content.”</p>
+    </body>
     </body>
 </html>
+
 
 
