--- a/openings.html
+++ b/openings.html
@@ -8,12 +8,12 @@
     <body>
         <h1><a href="index.html" title="Home Page">Go back to home page</a></h1>
         <h1>Queen's Gambit</h1>
-        <ul style="font-size: 2vw;">
+        <ul style="font-size: clamp(30px, 2vw, 60px);">
             <li><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="View" target="_blank">Playing the Queen's Gambit - A Grandmaster Guide</a> by Lars Schandorff</li>
             <li><a href="https://pdfcoffee.com/qdownload/avrukh-boris-the-queens-gambit-pdf-free.html" title="Download" target="_blank">The Queen's Gambit</a> by Avrukh Boris</li>
         </ul>
         <h1>1. d4 Repertoire</h1>
-        <ul style="font-size: 2vw;">
+        <ul style="font-size: clamp(30px, 2vw, 60px);">
             <li><a href="https://pdfcoffee.com/qdownload/boris-avrukh-2008-grandmaster-repertoire-1-1-d4-volume-one-462p-engpdf-pdf-free.html" title="Download" target="_blank">1. d4 Grandmaster Repertoire 2008 Volume one</a> by Avrukh Boris</li>
             <li><a href="https://chess96.ru/books/Avrukh%20Boris%20-%201.d4%20volume%20two,%202010.pdf" title="Download" target="_blank">1. d4 Grandmaster Repertoire 2010 Volume two</a> by Avrukh Boris | Need VPN</li>
             <li><a href="https://pdfcoffee.com/qdownload/grandmaster-repertoire-2a-1d4-kings-indian-and-grunfeld-boris-avrukh-2018-pdf-free.html" title="Download" target="_blank">1. d4 Grandmaster Repertoire 2A 2018 King's Indian & Grunfeld</a> by Avrukh Boris</li>
