--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1 style="position: absolute; top: 5px; right: 20px; font-family: Arial, sans-serif;"><mark style="background-color: rgb(38, 86, 130); color: azure;">"Free to use"</mark></h1>
         <div style="font-size: clamp(20px, 2vw, 60px); position: relative; top: 5px; left: 5px;">
             <p style="margin: 0;"><a href="aboutwebsite.html" title="Go to another page">Read more about the website</a></p>
             <p style="margin: 0;"><a href="https://www.facebook.com/share/1BRbsv6MS1/" title="Go to Facebook" target="_blank">Facebook</a></p>
             <p style="margin: 0;"><a href="https://t.me/Vforvector" title="Go to Telegram" target="_blank">Telegram</a></p>
         </div>
         <hr>
-        <h1 style="text-align: center; font-size: clamp(20px, 12vw, 80px); margin: 0">Chess & Stuff</h1>
-        <h1 style="text-align: center; font-size: clamp(20px, 2vw, 60px); margin: 0">Welcome to the website</h1>
-        <br>
+        <h1 style="text-align: center; font-size: clamp(20px, 12vw, 70px); margin: 0">Chess & Stuff</h1>
+        <h1 style="text-align: center; font-size: clamp(20px, 2vw, 50px); margin: 0">Welcome to the website</h1>
         <div style="text-align: center;">
             <a href="openings.html">
             <button style="
@@ -31,6 +31,7 @@
             </button>
             </a>
             <br>
+            <a href="middlegame.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -43,7 +44,9 @@
                 cursor: pointer;
                 ">Middlegame
             </button>
+            </a>
             <br>
+            <a href="endgame.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -56,7 +59,9 @@
                 cursor: pointer;
                 ">Endgame
             </button>
+            </a>
             <br>
+            <a href="tactics.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -69,7 +74,9 @@
                 cursor: pointer;
                 ">Tactics
             </button>
+            </a>
             <br>
+            <a href="positional.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -82,7 +89,9 @@
                 cursor: pointer;
                 ">Positional
             </button>
+            </a>
             <br>
+            <a href="gamecollections.html">
             <button style="
                 font-size: clamp(14px, 4vw, 18px);
                 background-color: rgb(255, 255, 255);
@@ -95,11 +104,8 @@
                 cursor: pointer;
                 ">Game Collections
             </button>
+            </a>
         </div>
         <p style="position: relative; bottom: 0%; text-align: center;">“All external links are provided for educational purposes. Chess & Stuff does not host or claim ownership of any third-party content.”</p>
     </body>
-    </body>
 </html>
-
-
-
