--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 padding: 10px;
                 margin: 10px 0;
                 cursor: pointer;
-                ">Positional
+                ">Positional Play
             </button>
             </a>
             <br>
