--- a/openings.html
+++ b/openings.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1><a href="index.html" title="Home Page">Go back to home page</a></h1>
+        <h1 style="font-size: clamp(20px, 2vw, 35px);"><a href="index.html" title="Home Page">Go back to home page</a></h1>
         <h1>Queen's Gambit</h1>
         <ul style="font-size: clamp(20px, 2vw, 40px);">
             <li><a href="https://sah-conpet.com/phpbb/images/Playing%201.d4%20The%20Queen's%20Gambit%20(Grandmaster%20Guide).pdf" title="View" target="_blank">Playing the Queen's Gambit - A Grandmaster Guide</a> by Lars Schandorff</li>
